# nft-generative-art

./: .gitignore  README.md
.claude/: launch.json
backend/: .env.example  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: verification.py
backend/src/generator/: prompt_builder.py  stable_diffusion.py
backend/src/listener/: chain_listener.py
backend/src/reveal/: token_revealer.py
backend/src/storage/: ipfs_uploader.py
backend/tests/: test_prompt_builder.py
contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: GenerativeNFT.sol
contracts/deployments/: amoy.json
contracts/scripts/: deploy.ts
contracts/test/: GenerativeNFT.test.ts
shared/: prompts.json
